# cfsSIA3D

./: .gitignore  CMakeLists.txt  Logger.eap  TODO.txt  cfsSIA3D.eap
Applications/: CMakeLists.txt  main.cpp
Backend/: Backend.cpp  Backend.hpp  CMakeLists.txt  main.cpp
Configuration/: AppConfiguration.xsd  CMakeLists.txt  ModelConfiguration.xsd  ModelCoreConfiguration.xsd  Parameter.xsd  SubComponent.xsd
Glacier/: CMakeLists.txt  Glacier.cpp  Glacier.hpp  PhysicsCoreParams.cpp  PhysicsCoreParams.hpp
Glacier/GlacierComponents/: CMakeLists.txt  GlacierComponent.cpp  GlacierComponent.hpp
Glacier/GlacierComponents/Geometry/: CMakeLists.txt  Geometry.cpp  Geometry.hpp  GeometryFactory.cpp  GeometryFactory.hpp
Glacier/GlacierComponents/MassBalance/: AcAmELA.cpp  AcAmELA.hpp  CMakeLists.txt  ConstantMB.cpp  ConstantMB.hpp  GradELA.cpp  GradELA.hpp  MassBalance.cpp  MassBalance.hpp  MassBalanceFactory.cpp  MassBalanceFactory.hpp  ZeroMB.cpp  ZeroMB.hpp
Glacier/GlacierComponents/Rheology/: CMakeLists.txt  Rheology.cpp  Rheology.hpp  RheologyFactory.cpp  RheologyFactory.hpp
Glacier/GlacierComponents/SlidingLaw/: AltitudeSL.cpp  AltitudeSL.hpp  CMakeLists.txt  ConstantSL.cpp  ConstantSL.hpp  SlidingLaw.cpp  SlidingLaw.hpp  SlidingLawFactory.cpp  SlidingLawFactory.hpp  ZeroSL.cpp  ZeroSL.hpp
ModelComponent/: CMakeLists.txt  ModelComponent.cpp  ModelComponent.hpp
Numerics/: CMakeLists.txt  Numerics.eap  Numerics.ldb  NumericsCoreParams.cpp  NumericsCoreParams.hpp
Numerics/Algorithms/: CMakeLists.txt  NumericsCoreParams.cpp  NumericsCoreParams.hpp  Primal.cpp  Primal.hpp
Numerics/Algorithms/PrimalAlgorithms/: CMakeLists.txt  DumbAlgorithm.cpp  DumbAlgorithm.hpp  FiniteDifferencePrimalAlgorithm.cpp  FiniteDifferencePrimalAlgorithm.hpp  PrimalAlgorithm.cpp  PrimalAlgorithm.hpp
Numerics/Algorithms/PrimalAlgorithms/ClimateAlgorithms/: CMakeLists.txt  ClimateAlgorithm.hpp.old  ClimateAlgorithmFactory.cpp  ClimateAlgorithmFactory.hpp  FiniteDifferenceClimateAlgorithm.cpp  FiniteDifferenceClimateAlgorithm.hpp  FullyImplicitClimateAlgorithm.cpp  FullyImplicitClimateAlgorithm.hpp
Numerics/Algorithms/PrimalAlgorithms/DiffusionAlgorithms/: CMakeLists.txt  DiffusionAlgorithmFactory.cpp  DiffusionAlgorithmFactory.hpp  FiniteDifferenceDiffusionAlgorithm.cpp  FiniteDifferenceDiffusionAlgorithm.hpp  SemiImplicitDiffusionAlgorithm.cpp  SemiImplicitDiffusionAlgorithm.hpp
Numerics/Algorithms/PrimalAlgorithms/ProjectionAlgorithms/: CMakeLists.txt  FiniteDifferenceProjectionAlgorithm.cpp  FiniteDifferenceProjectionAlgorithm.hpp  HeavisideProjectionAlgorithm.cpp  HeavisideProjectionAlgorithm.hpp  ProjectionAlgorithm.hpp.old  ProjectionAlgorithmFactory.cpp  ProjectionAlgorithmFactory.hpp
Numerics/LinSyst/: BelosLinSyst.cpp  BelosLinSyst.hpp  CMakeLists.txt  EpetraMatrix.cpp  EpetraMatrix.hpp  EpetraVector.cpp  EpetraVector.hpp  IMatrix.cpp  IMatrix.hpp  IVector.cpp  IVector.hpp  LinSyst.cpp  LinSyst.hpp  LinSystConfig.hpp.in  LinSystFactory.cpp  LinSystFactory.hpp  Matrix.cpp  Matrix.hpp  PETScLinSyst.cpp  PETScLinSyst.hpp  Vector.cpp  Vector.hpp
Numerics/Mesh/: CMakeLists.txt  Grid.cpp  Grid.hpp  SpaceParams.cpp  SpaceParams.hpp
Numerics/Schemes/: CMakeLists.txt  ForwardScheme.cpp  ForwardScheme.hpp  FullyImplicitScheme.cpp  FullyImplicitScheme.hpp  Primal.cpp  Primal.hpp  SemiImplicitScheme.cpp  SemiImplicitScheme.hpp
Numerics/Schemes/PrimalAlgorithms/: CMakeLists.txt  DumbAlgorithm.cpp  DumbAlgorithm.hpp  PrimalAlgorithm.cpp  PrimalAlgorithm.hpp
Numerics/Schemes/PrimalAlgorithms/ClimateAlgorithms/: CMakeLists.txt  ClimateAlgorithm.cpp.old  ClimateAlgorithmFactory.cpp  ClimateAlgorithmFactory.hpp  (+2 more)
Physics/: CMakeLists.txt  PhysicalComponent.cpp  PhysicalComponent.hpp  PhysicalComponentFactory.cpp.old  PhysicalComponentFactory.hpp.old  PhysicalModel.cpp  PhysicalModel.hpp  PhysicsCoreParams.cpp  PhysicsCoreParams.hpp  PhysicsModel.cpp  PhysicsModel.hpp
Physics/Components/: CMakeLists.txt  PhysicalComponent.cpp  PhysicalComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp
Physics/Components/MassBalance/: AcAmELA.cpp  AcAmELA.hpp  CMakeLists.txt  ConstantMB.cpp  ConstantMB.hpp  GradELA.cpp  GradELA.hpp  MassBalance.cpp  MassBalance.hpp  MassBalanceFactory.cpp  MassBalanceFactory.hpp  ZeroMB.cpp  ZeroMB.hpp
Physics/Components/Rheology/: CMakeLists.txt  Rheology.cpp  Rheology.hpp  RheologyFactory.cpp  RheologyFactory.hpp
Physics/Components/SlidingLaw/: AltitudeSL.cpp  AltitudeSL.hpp  CMakeLists.txt  ConstantSL.cpp  ConstantSL.hpp  SlidingLaw.cpp  SlidingLaw.hpp  SlidingLawFactory.cpp  SlidingLawFactory.hpp  ZeroSL.cpp  ZeroSL.hpp
Physics/MassBalance/: AcAmELA.cpp  AcAmELA.hpp  CMakeLists.txt  ConstantMB.cpp  ConstantMB.hpp  GradELA.cpp  GradELA.hpp  MassBalance.cpp  MassBalance.hpp  MassBalanceFactory.cpp  MassBalanceFactory.hpp  ZeroMB.cpp  ZeroMB.hpp
Physics/PhysicsComponents/: CMakeLists.txt  PhysicsComponent.cpp  PhysicsComponent.hpp
Physics/PhysicsComponents/MassBalance/: AcAmELA.cpp  AcAmELA.hpp  CMakeLists.txt  ConstantMB.cpp  ConstantMB.hpp  GradELA.cpp  GradELA.hpp  MassBalance.cpp  MassBalance.hpp  MassBalanceFactory.cpp  MassBalanceFactory.hpp  ZeroMB.cpp  ZeroMB.hpp
Physics/PhysicsComponents/Rheology/: CMakeLists.txt  Rheology.cpp  Rheology.hpp  RheologyFactory.cpp  RheologyFactory.hpp
Physics/PhysicsComponents/SlidingLaw/: AltitudeSL.cpp  AltitudeSL.hpp  CMakeLists.txt  ConstantSL.cpp  ConstantSL.hpp  SlidingLaw.cpp  SlidingLaw.hpp  SlidingLawFactory.cpp  SlidingLawFactory.hpp  ZeroSL.cpp  ZeroSL.hpp
Physics/Rheology/: CMakeLists.txt  Rheology.cpp  Rheology.hpp  RheologyFactory.cpp  RheologyFactory.hpp
Physics/SlidingLaw/: AltitudeSL.cpp  AltitudeSL.hpp  CMakeLists.txt  ConstantSL.cpp  ConstantSL.hpp  SlidingLaw.cpp  SlidingLaw.hpp  SlidingLawFactory.cpp  SlidingLawFactory.hpp
Utility/: Array2D.cpp  Array2D.hpp  CMakeLists.txt  ICoreParams.cpp  ICoreParams.hpp  Math.cpp  Math.hpp  Singleton.hpp
Utility/Logger/: CMakeLists.txt  Log.hpp  Logger.cpp  Logger.hpp
Utility/XMLParser/: CMakeLists.txt  XMLReader.cpp  XMLReader.hpp
(+133 files in other folders)
