CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(cfsSIA3D)

SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/CMake")
SET(XSD_CONFIG_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Configuration")

FIND_PACKAGE(Trilinos 11.4 REQUIRED PATHS ${TRILINOS_PATH}/lib/cmake/Trilinos ${TRILINOS_PATH})
FIND_PACKAGE(Xerces 3.1 REQUIRED)
FIND_PACKAGE(Xsd 4.0 REQUIRED)

INCLUDE(Macros)

#MESSAGE("Found Epetra = ${Trilinos_FOUND}, ${Trilinos_INCLUDE_DIRS}, ${Epetra_LIBRARIES}, ${Belos_LIBRARIES}")

ADD_SUBDIRECTORY(Applications)
ADD_SUBDIRECTORY(Glacier)
ADD_SUBDIRECTORY(Numerics)
ADD_SUBDIRECTORY(Utility)
ADD_SUBDIRECTORY(Configuration)