PROJECT(Applications)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}/..
	${CMAKE_CURRENT_BINARY_DIR}/..
	${XERCES_INCLUDE_DIRS}
	${XSD_INCLUDE_DIRS}
)

FILE(GLOB src RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp" "*.hpp")

ADD_EXECUTABLE(cfsSIA3D ${src})
TARGET_LINK_LIBRARIES(cfsSIA3D Mesh Utility Physics)