PROJECT(BackendApp)

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/..
	${PROJECT_BINARY_DIR}/..
	${XERCES_INCLUDE_DIRS}
	${XSD_INCLUDE_DIRS}
)

FILE(GLOB src RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp" "*.hpp")

ADD_EXECUTABLE(${PROJECT_NAME} ${src})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} Mesh Utility Glacier Algorithms LinSyst Configuration ${MPI_LIBRARIES})

FILE(GLOB includes RELATIVE "${PROJECT_SOURCE_DIR}" "*.hpp")
INSTALL(FILES ${includes}	DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME})
INSTALL(TARGETS ${PROJECT_NAME}
				RUNTIME	DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/)
