PROJECT(Glacier) 

ADD_SUBDIRECTORY(GlacierComponents)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/..
	${CMAKE_CURRENT_BINARY_DIR}/..
	${CMAKE_CURRENT_SOURCE_DIR}/GlacierComponents
	${XSD_INCLUDE_DIRS}
	${XERCES_INCLUDE_DIRS}
)

FILE(GLOB src RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" "*.hpp")

ADD_LIBRARY(Glacier ${src})
TARGET_LINK_LIBRARIES(Glacier
	${XERCES_LIBRARIES}
	MassBalance
	Rheology
	SlidingLaw
	Geometry
)
