PROJECT(Glacier) 

ADD_SUBDIRECTORY(GlacierComponents)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/..
	${CMAKE_CURRENT_BINARY_DIR}/..
	${CMAKE_CURRENT_SOURCE_DIR}/GlacierComponents
	${XSD_INCLUDE_DIRS}
	${XERCES_INCLUDE_DIRS}
)

FILE(GLOB src RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" "*.hpp")

ADD_LIBRARY(${PROJECT_NAME} ${src})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	${XERCES_LIBRARIES}
	Configuration
	MassBalance
	Rheology
	SlidingLaw
	Geometry
)

FILE(GLOB includes RELATIVE "${PROJECT_SOURCE_DIR}" "*.hpp")
INSTALL(FILES ${includes}	DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME})
INSTALL(TARGETS ${PROJECT_NAME}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/)
