PROJECT(ModelComponent) 

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}
	${PROJECT_BINARY_DIR}
	${PROJECT_SOURCE_DIR}/..
	${PROJECT_BINARY_DIR}/..
	${XSD_INCLUDE_DIRS}
	${XERCES_INCLUDE_DIRS}
)

FILE(GLOB src RELATIVE ${PROJECT_SOURCE_DIR} "*.cpp" "*.hpp")

ADD_LIBRARY(ModelComponent ${src})
TARGET_LINK_LIBRARIES(ModelComponent
	${XERCES_LIBRARIES}
)
