PROJECT(Numerics)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/..
	${CMAKE_CURRENT_BINARY_DIR}/..
	${XSD_INCLUDE_DIRS}
	${XERCES_INCLUDE_DIRS}
)

ADD_SUBDIRECTORY(Mesh)
ADD_SUBDIRECTORY(LinSyst)
ADD_SUBDIRECTORY(Algorithms)

# TODO: find out how to make a Numerics.lib

#FILE(GLOB src RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" "*.hpp")

#ADD_LIBRARY(Numerics ${src})
#TARGET_LINK_LIBRARIES(Numerics Algorithms)