PROJECT(Physics) 

ADD_SUBDIRECTORY(PhysicsComponents)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/..
	${CMAKE_CURRENT_BINARY_DIR}/..
	${CMAKE_CURRENT_SOURCE_DIR}/PhysicsComponents
	${XSD_INCLUDE_DIRS}
	${XERCES_INCLUDE_DIRS}
)

FILE(GLOB src RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" "*.hpp")

ADD_LIBRARY(Physics ${src})
TARGET_LINK_LIBRARIES(Physics 
	${XERCES_LIBRARIES}
	MassBalance
	Rheology
	SlidingLaw
)
