PROJECT(Utility)

ADD_SUBDIRECTORY(Logger)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_BIN_DIR}
)

FILE(GLOB src RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" "*.hpp")

ADD_LIBRARY(${PROJECT_NAME} ${src})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Logger)

FILE(GLOB includes RELATIVE "${PROJECT_SOURCE_DIR}" "*.hpp")
INSTALL(FILES ${includes}	DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME})
INSTALL(TARGETS ${PROJECT_NAME}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/)
