PROJECT(GlacierComponents) 

ADD_SUBDIRECTORY(SlidingLaw)
ADD_SUBDIRECTORY(Rheology)
ADD_SUBDIRECTORY(MassBalance)
ADD_SUBDIRECTORY(Geometry)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/../..
	${CMAKE_CURRENT_BINARY_DIR}/../..
	${XSD_INCLUDE_DIRS}
	${XERCES_INCLUDE_DIRS}
)

FILE(GLOB src RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" "*.hpp")

ADD_LIBRARY(GlacierComponents ${src})
TARGET_LINK_LIBRARIES(GlacierComponents
	${XERCES_LIBRARIES}
	Configuration
	ModelComponent
)
