PROJECT(Components) 

ADD_SUBDIRECTORY(SlidingLaw)
ADD_SUBDIRECTORY(Rheology)
ADD_SUBDIRECTORY(MassBalance)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
	${XSD_INCLUDE_DIRS}
	${XERCES_INCLUDE_DIRS}
)

FILE(GLOB src RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" "*.hpp")

XSD2CPPCLASS(PhysicsCoreConfiguration.xsd)
XSD2CPPCLASS(PhysicsConfiguration.xsd)
XSD2CPPCLASS(Parameter.xsd)

ADD_LIBRARY(Components ${src})
TARGET_LINK_LIBRARIES(Components
	${XERCES_LIBRARIES}
#	MassBalance
#	Rheology
#	SlidingLaw
)
