PROJECT(SlidingLaw)

INCLUDE_DIRECTORIES(
${CMAKE_CURRENT_SOURCE_DIR}/../
${CMAKE_CURRENT_SOURCE_DIR}
${CMAKE_CURRENT_BINARY_DIR}
${CMAKE_CURRENT_SOURCE_DIR}/../../Numerics/Mesh
${CMAKE_CURRENT_BINARY_DIR}/..
)

FILE(GLOB src RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp" "*.hpp")

ADD_LIBRARY(SlidingLaw ${src})
TARGET_LINK_LIBRARIES(SlidingLaw PhysicalComponent)