PROJECT(Logger)

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}
	${PROJECT_BINARY_DIR}
	${PROJECT_SOURCE_DIR}/../..
	${PROJECT_BINARY_DIR}/../..
	${XSD_INCLUDE_DIRS}
	${XERCES_INCLUDE_DIRS}
)

FILE(GLOB src RELATIVE ${PROJECT_SOURCE_DIR} "*.cpp" "*.hpp")

ADD_LIBRARY(Logger ${src})
TARGET_LINK_LIBRARIES(Logger Configuration)