PROJECT(ClimateAlgorithms)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/..
	${CMAKE_CURRENT_SOURCE_DIR}/../../../..
	${CMAKE_CURRENT_BINARY_DIR}/../../../..
	${XSD_INCLUDE_DIRS}
	${XERCES_INCLUDE_DIRS}
)

FILE(GLOB src RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp" "*.hpp")

ADD_LIBRARY(ClimateAlgorithms ${src})
TARGET_LINK_LIBRARIES(ClimateAlgorithms Configuration)
